modified: app/Config/Database.php

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ $RECYCLE.BIN/
 .vagrant
 Vagrantfile
 
+# Self
+ci4_byf_app.sql
+
 #-------------------------
 # Temporary Files
 #-------------------------
